# modapp-cicdtools

./: .flake8  .gitignore  README.md  lint.sh  pyproject.toml
.github/workflows/: ci.yml
modapp_cicdtools/: archive.py  cli.py  file_exists.py  test_run.py
scripts/: build_appimage.sh  change_load_path.sh  compile.sh  compile_for_appimage.sh  create_appimage.sh  create_venv.sh  replace_load_path.py
tests/: test_archive.py  test_file_exists.py  test_run_start.py
