[tool.poetry]
name = "modapp-cicdtools"
version = "0.1.4"
description = "Tools for simplyfing CICD configuration to build cross-platform applications"
authors = ["Vladyslav Hnatiuk <vhnatiuk@ukr.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modapp_cicdtools"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.6.1"}
command-runner = "^1.4.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-unordered = "^0.5.1"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
flake8-bugbear = "^22.8.23"
flake8-comprehensions = "^3.10.0"
bandit = "^1.7.4"
safety = "^2.1.1"
mypy = "^0.971"
Nuitka = "^1.0.6"
ordered-set = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cicdtools = "modapp_cicdtools.cli:app"

[tool.black]
target-version = ['py38', 'py39', 'py310']
--preview="yes"
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['command_runner']
ignore_missing_imports = true
